--- a/stepZilla.css
+++ b/stepZilla.css
@@ -1,3 +1,8 @@
+
+#root{
+  background: url('/assets/img/SignInActive.png') no-repeat -9999px -9999px;
+}
+
 ol.progtrckr {
   list-style-type: none;
   padding: 0;
