--- a/src/components/DataComponents/css/Datacomponents.css
+++ b/src/components/DataComponents/css/Datacomponents.css
@@ -2,3 +2,15 @@ td {
     box-sizing: border-box;
     display: table-cell;
 }
+table td[class*="col-"],
+table th[class*="col-"] {
+  position: static;
+  display: table-cell;
+  float: none;
+}
+.tdData {
+  padding: 8px;
+  line-height: 1.42857143;
+  vertical-align: top;
+  border-top: 1px solid #ddd;
+}
