--- a/stepZilla.css
+++ b/stepZilla.css
@@ -101,3 +101,7 @@ ol.progtrckr li.progtrckr-done:before {
 ol.progtrckr li.progtrckr-done:hover:before {
   color: #333;
 }
+
+textarea {
+  resize: vertical;
+}
